chore(scanner): prepare for all_secrets option
- remove `ignore_known_secrets=True`, which didn't make sense
- add `all_secrets=True`, to get all secrets found by the backend

Notes:
- Since we add `all_secrets=True`, we also need to filter-out secrets                                                                                                          [13:30:5         excluded by the backend
- Since we changed the query params, all secret-related cassettes
  have been rewritten

--- a/tests/unit/cassettes/multiple_secrets.yaml
+++ b/tests/unit/cassettes/multiple_secrets.yaml
@@ -132,4 +132,86 @@ interactions:
       status:
         code: 200
         message: OK
+  - request:
+      body:
+        '[{"filename": "commit://patch/test.txt", "document": "@@ -0,0 +1,2 @@\n+FacebookAppKeys
+        :\n+String docker run --name geonetwork -d             -p 8080:8080 -e MYSQL_HOST=google.com             -e
+        MYSQL_PORT=5434 -e MYSQL_USERNAME=root             -e MYSQL_PASSWORD=m42ploz2wd
+        geonetwork\n"}]'
+      headers:
+        Accept:
+          - '*/*'
+        Accept-Encoding:
+          - gzip, deflate
+        Connection:
+          - keep-alive
+        Content-Length:
+          - '291'
+        Content-Type:
+          - application/json
+        GGShield-Command-Id:
+          - bd5647f1-8ab2-4870-8e42-7423d4a20ed6
+        GGShield-Command-Path:
+          - external
+        GGShield-OS-Name:
+          - ubuntu
+        GGShield-OS-Version:
+          - '22.04'
+        GGShield-Python-Version:
+          - 3.11.8
+        GGShield-Version:
+          - 1.33.0
+        User-Agent:
+          - pygitguardian/1.18.0 (Linux;py3.11.8)
+        mode:
+          - path
+      method: POST
+      uri: https://api.gitguardian.com/v1/multiscan?all_secrets=True
+    response:
+      body:
+        string:
+          '[{"policy_break_count":1,"policies":["Secrets detection"],"policy_breaks":[{"type":"MySQL
+          Credentials","policy":"Secrets detection","matches":[{"type":"host","match":"google.com","index_start":114,"index_end":123,"line_start":3,"line_end":3},{"type":"port","match":"5434","index_start":151,"index_end":154,"line_start":3,"line_end":3},{"type":"username","match":"root","index_start":174,"index_end":177,"line_start":3,"line_end":3},{"type":"password","match":"m42ploz2wd","index_start":209,"index_end":218,"line_start":3,"line_end":3}],"is_excluded":false,"exclude_reason":null,"incident_url":"","known_secret":false,"validity":"failed_to_check","diff_kind":"addition"}],"is_diff":true}]'
+      headers:
+        access-control-expose-headers:
+          - X-App-Version
+        allow:
+          - POST, OPTIONS
+        content-length:
+          - '687'
+        content-type:
+          - application/json
+        cross-origin-opener-policy:
+          - same-origin
+        date:
+          - Wed, 27 Nov 2024 12:13:27 GMT
+        referrer-policy:
+          - strict-origin-when-cross-origin
+        server:
+          - istio-envoy
+        strict-transport-security:
+          - max-age=31536000; includeSubDomains
+        vary:
+          - Cookie
+        x-app-version:
+          - v2.121.0
+        x-content-type-options:
+          - nosniff
+          - nosniff
+        x-envoy-upstream-service-time:
+          - '3100'
+        x-frame-options:
+          - DENY
+          - SAMEORIGIN
+        x-sca-engine-version:
+          - 2.2.0
+        x-sca-last-vuln-fetch:
+          - '2024-11-27T11:13:18.771122+00:00'
+        x-secrets-engine-version:
+          - 2.127.0
+        x-xss-protection:
+          - 1; mode=block
+      status:
+        code: 200
+        message: OK
 version: 1
