--- a/tests/unit/cassettes/test_scan_file_secret_with_validity.yaml
+++ b/tests/unit/cassettes/test_scan_file_secret_with_validity.yaml
@@ -130,4 +130,84 @@ interactions:
       status:
         code: 200
         message: OK
+  - request:
+      body:
+        '[{"filename": "commit://patch/test", "document": "@@ -0,0 +2 @@\n+# gg
+        token\n+apikey = \"ggtt-v-12345azert\";\n"}]'
+      headers:
+        Accept:
+          - '*/*'
+        Accept-Encoding:
+          - gzip, deflate
+        Connection:
+          - keep-alive
+        Content-Length:
+          - '115'
+        Content-Type:
+          - application/json
+        GGShield-Command-Id:
+          - 359f1f06-8e52-42d7-8443-074bbc29407f
+        GGShield-Command-Path:
+          - external
+        GGShield-OS-Name:
+          - ubuntu
+        GGShield-OS-Version:
+          - '22.04'
+        GGShield-Python-Version:
+          - 3.11.8
+        GGShield-Version:
+          - 1.33.0
+        User-Agent:
+          - pygitguardian/1.18.0 (Linux;py3.11.8)
+        mode:
+          - path
+      method: POST
+      uri: https://api.gitguardian.com/v1/multiscan?all_secrets=True
+    response:
+      body:
+        string:
+          '[{"policy_break_count":1,"policies":["Secrets detection"],"policy_breaks":[{"type":"GitGuardian
+          Test Token Checked","policy":"Secrets detection","matches":[{"type":"apikey","match":"ggtt-v-12345azert","index_start":37,"index_end":53,"line_start":3,"line_end":3}],"is_excluded":false,"exclude_reason":null,"incident_url":"","known_secret":false,"validity":"valid","diff_kind":"addition"}],"is_diff":true}]'
+      headers:
+        access-control-expose-headers:
+          - X-App-Version
+        allow:
+          - POST, OPTIONS
+        content-length:
+          - '404'
+        content-type:
+          - application/json
+        cross-origin-opener-policy:
+          - same-origin
+        date:
+          - Wed, 27 Nov 2024 12:13:29 GMT
+        referrer-policy:
+          - strict-origin-when-cross-origin
+        server:
+          - istio-envoy
+        strict-transport-security:
+          - max-age=31536000; includeSubDomains
+        vary:
+          - Cookie
+        x-app-version:
+          - v2.121.0
+        x-content-type-options:
+          - nosniff
+          - nosniff
+        x-envoy-upstream-service-time:
+          - '73'
+        x-frame-options:
+          - DENY
+          - SAMEORIGIN
+        x-sca-engine-version:
+          - 2.2.0
+        x-sca-last-vuln-fetch:
+          - '2024-11-27T11:13:18.771122+00:00'
+        x-secrets-engine-version:
+          - 2.127.0
+        x-xss-protection:
+          - 1; mode=block
+      status:
+        code: 200
+        message: OK
 version: 1
