--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -7,6 +7,7 @@
   args: ['secret', 'scan', 'pre-commit']
   language: python
   pass_filenames: false
+  minimum_pre_commit_version: 3.2.0
 
 - id: ggshield-iac
   name: ggshield-iac (pre-commit)
@@ -16,6 +17,7 @@
   args: ['iac', 'scan', 'pre-commit']
   language: python
   pass_filenames: false
+  minimum_pre_commit_version: 3.2.0
 
 - id: ggshield-sca
   name: ggshield-sca (pre-commit)
@@ -25,6 +27,7 @@
   args: ['sca', 'scan', 'pre-commit']
   language: python
   pass_filenames: false
+  minimum_pre_commit_version: 3.2.0
 
 - id: docker-ggshield
   name: ggshield (pre-commit,docker)
@@ -41,6 +44,7 @@
   stages: [pre-push]
   language: python
   pass_filenames: false
+  minimum_pre_commit_version: 3.2.0
 
 - id: ggshield-iac-push
   name: ggshield-iac (pre-push)
@@ -50,6 +54,7 @@
   stages: [pre-push]
   language: python
   pass_filenames: false
+  minimum_pre_commit_version: 3.2.0
 
 - id: ggshield-sca-push
   name: ggshield-sca (pre-push)
@@ -59,6 +64,7 @@
   stages: [pre-push]
   language: python
   pass_filenames: false
+  minimum_pre_commit_version: 3.2.0
 
 - id: docker-ggshield-push
   name: ggshield (pre-push,docker)
