--- a/.github/workflows/build_release_assets.yml
+++ b/.github/workflows/build_release_assets.yml
@@ -268,6 +268,7 @@ jobs:
           - debian:stable
           - ubuntu:latest
           - rockylinux/rockylinux:8.8
+          - rockylinux/rockylinux:9
           - opensuse/leap
           # Test a distribution with no deb or rpm support
           - clearlinux:latest
