chore: make RPM smoke tests more precise
Our RPM only depends on git-core, so install only that.

--- a/.github/workflows/build_release_assets.yml
+++ b/.github/workflows/build_release_assets.yml
@@ -291,11 +291,11 @@ jobs:
               dpkg -i packages/*.deb
               ;;
             rockylinux*)
-              yum install -y git
+              yum install -y git-core
               rpm -i packages/*.rpm
               ;;
             opensuse*)
-              zypper install -y git
+              zypper install -y git-core
               rpm -i packages/*.rpm
               ;;
             clearlinux*)
