chore: update env example

--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,11 @@ GITGUARDIAN_INSTANCE=https://dashboard.gitguardian.com/
 # TEST_KNOWN_SECRET, this one has a default value, so you do not have to set
 # it unless the default value does not work for you
 #TEST_UNKNOWN_SECRET=
-# Set this to a single match secret unknown by your dashboard with a valid status
-# This is required to run functional tests on an account monitoring ggshield repository,
-# where the token in conftest.py has been ignored
-TEST_GG_VALID_TOKEN=
-TEST_GG_VALID_TOKEN_IGNORE_SHA=
+
+# You might need to set those 2 vars to run tests
+# - push a valid GitGuardian test token in your workspace
+# (see https://docs.gitguardian.com/secrets-detection/secrets-detection-engine/detectors/specifics/gitguardian_test_token_checked)
+# - set TEST_GG_VALID_TOKEN to this value
+# - and set TEST_GG_VALID_TOKEN_IGNORE_SHA to matching commit sha
+# TEST_GG_VALID_TOKEN=
+# TEST_GG_VALID_TOKEN_IGNORE_SHA=
