--- a/tests/unit/cassettes/test_hmsl_api_status.yaml
+++ b/tests/unit/cassettes/test_hmsl_api_status.yaml
@@ -1,5 +1,63 @@
 interactions:
   - request:
+      body: '{"audience": "https://api.hasmysecretleaked.com", "audience_type": "hmsl"}'
+      headers:
+        Accept:
+          - '*/*'
+        Accept-Encoding:
+          - gzip, deflate
+        Connection:
+          - keep-alive
+        Content-Length:
+          - '74'
+        Content-Type:
+          - application/json
+        User-Agent:
+          - pygitguardian/1.20.0 (Linux;py3.11.8) ggshield
+      method: POST
+      uri: https://api.gitguardian.com/v1/auth/jwt
+    response:
+      body:
+        string: '{"token": "<REDACTED>"}'
+      headers:
+        access-control-expose-headers:
+          - X-App-Version
+        allow:
+          - POST, OPTIONS
+        content-length:
+          - '741'
+        content-type:
+          - application/json
+        cross-origin-opener-policy:
+          - same-origin
+        date:
+          - Thu, 27 Feb 2025 17:20:28 GMT
+        referrer-policy:
+          - strict-origin-when-cross-origin
+        server:
+          - istio-envoy
+        strict-transport-security:
+          - max-age=31536000; includeSubDomains
+        vary:
+          - Cookie
+        x-app-version:
+          - v2.158.0
+        x-content-type-options:
+          - nosniff
+          - nosniff
+        x-envoy-upstream-service-time:
+          - '68'
+        x-frame-options:
+          - DENY
+          - SAMEORIGIN
+        x-secrets-engine-version:
+          - 2.133.0
+        x-xss-protection:
+          - 1; mode=block
+      status:
+        code: 200
+        message: OK
+  - request:
       body: null
       headers:
         Accept:
@@ -11,7 +69,7 @@ interactions:
         GGShield-HMSL-Command-Name:
           - cli_hmsl_api-status
         User-Agent:
-          - GGShield 1.21.0
+          - GGShield 1.36.0
       method: GET
       uri: https://api.hasmysecretleaked.com/healthz
     response:
@@ -23,13 +81,13 @@ interactions:
         content-type:
           - application/json
         date:
-          - Tue, 28 Nov 2023 09:00:15 GMT
+          - Thu, 27 Feb 2025 17:20:28 GMT
         server:
           - istio-envoy
         x-app-version:
-          - 1.9.0
+          - 1.12.11
         x-envoy-upstream-service-time:
-          - '6'
+          - '4'
       status:
         code: 200
         message: OK
