--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -175,3 +175,23 @@ jobs:
           scripts/push-to-cloudsmith
         env:
           CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
+
+  push_to_chocolatey:
+    needs: build_release_assets
+    name: Push to Chocolatey
+    runs-on: chocolatey/choco
+    if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Download packages
+        uses: actions/download-artifact@v4
+        with:
+          pattern: os-packages-windows-2022
+          path: packages
+          merge-multiple: true
+
+      - name: Push to Chocolatey
+        run: |
+          scripts/push-to-chocolatey/push-to-chocolatey
